Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49558

AVFoundation QMultimedia backend does not report duration for HTTP progressive download

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9.5
    • 5.5.1
    • Multimedia
    • None
    • iOS / OS-X
    • b9440a3047cfca9ae253e850db31b8e9b08538e7

    Description

      When pointing QMediaPlayer at an HTTP url for progressive download of an MP3 file on OS-X or iOS the AVFoundation backend in avfmediaplayersession.mm does not report back a correct duration after buffering is complete. It reports infinity (os-x) or 0 (iOS). Having looked at the code it seems you are not observing currentItem.duration and thus no durationChanged signal with a correct duration is emitted.

      Please see http://stackoverflow.com/questions/5952694/ios-avasset-duration-is-zero-for-http-live-streaming-but-works-for-progressive

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ylopes Yoann Lopes
            ostdp Olaf Stelling
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes