AVFoundation: use observer for tracking duration

For getting the duration of a video, Apple advises to use
AVPlayerItem.duration and tracking its duration changes
with an observer.

Task-number: QTBUG-49558
Change-Id: Ia2adc0d23deacd185f8c338f7f44948db2444beb
Reviewed-by: Christian Stromme <christian.stromme@qt.io>