src/plugins/avfoundation/mediaplayer/avfmediaplayersession.h
@@ -105,6 +105,9 @@ public Q_SLOTS:
 
     void processLoadStateChange();
     void processLoadStateFailure();
+
+    void processDurationChange(qint64 duration);
+
 Q_SIGNALS:
     void positionChanged(qint64 position);
     void durationChanged(qint64 duration);
